--- a/sim.conf
+++ b/sim.conf
@@ -7,4 +7,4 @@ line_size = 64
 # Experiment Settings
 [IO]
 input_trace_file    = "traces/example_input.trace"
-output_trace_file   = "traces/example_output.out"
+output_trace_file   = "traces/example_output.trace"
